fix inbox css bug

--- a/src/components/SubredditSearch/SubredditSearch.scss
+++ b/src/components/SubredditSearch/SubredditSearch.scss
@@ -79,8 +79,10 @@
     flex-direction: column;
   }
 
-  .btn.btn-primary {
-    margin-top: 1em;
+  .post-fetch-header {
+    .btn.btn-primary {
+      margin-top: 1em;
+    }
   }
 
   .mobile-fetch-inputs {
