--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -2,7 +2,6 @@
   display: inline-flex;
   justify-content: center;
   position: fixed;
-  padding-top: 3em;
   top: 0;
   right: 0;
   bottom: 0;
@@ -17,21 +16,18 @@
 .modal-body {
   display: flex;
   flex-direction: column;
-  background-color: var(--bg);
+  background-color: var(--bgLight);
   position: absolute;
   top: 3em;
   width: 100%;
-  max-width: 900px;
+  max-width: 1000px;
   border-radius: 10px;
   box-shadow: 0px 3px 10px rgba(black, 0.5);
-  padding: 1em;
 
   h3 {
     color: var(--text);
   }
 }
-
-
 
 .close-modal {
   display: flex;
