more modifications to modal

--- a/src/index.scss
+++ b/src/index.scss
@@ -52,7 +52,8 @@
   );
 
   --off-blue: rgb(232, 236, 241);
-
+  --forest: rgb(12, 107, 88);
+  --forest-20: rgb(25, 148, 115);
   // backgrounds
   --bg: var(--off-blue);
   --bgLighter: var(--white-20);
