--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -23,7 +23,8 @@
   max-width: 1000px;
   border-radius: 10px;
   box-shadow: 0px 3px 10px rgba(black, 0.5);
-
+  min-height: 630px;
+  height: fit-content;
   h3 {
     color: var(--text);
   }
