--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -6,24 +6,22 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: rgba(black, 0.5);
+  background-color: rgba(0, 0, 0, 0.5);
   z-index: 4;
   overflow-y: scroll;
   align-items: center;
   width: 100%;
 }
-
 .modal-body {
   display: flex;
   flex-direction: column;
   background-color: var(--bgLight);
-
   width: 100%;
   max-width: 1000px;
   border-radius: 10px;
-  box-shadow: 0px 3px 10px rgba(black, 0.5);
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.5);
   height: 630px;
-  h3 {
-    color: var(--text);
-  }
+}
+.modal-body h3 {
+  color: var(--text);
 }
