--- a/src/components/QueueList/QueueList.css
+++ b/src/components/QueueList/QueueList.css
@@ -1,6 +1,8 @@
 .queue-list-wrapper {
   width: 25%;
   background-color: var(--bg);
+  overflow-y: auto;
+  height: calc(100% - 60px);
 }
 
 .queue-list-wrapper.open {
